--- a/.github/workflows/master_suprajaapp-ci-cd.yml
+++ b/.github/workflows/master_suprajaapp-ci-cd.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           app-name: 'suprajaApp-CI-CD/staging'
           slot-name: 'staging'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6AD75E8A4AAA4563B8D73489CA5AA6DD }}
+          publish-profile: ${{ secrets.AZURE_STAGING }}
           package: .
 
   swap:
