--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -48,13 +48,9 @@ jobs:
           name: published-app
           path: publish
 
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: "supraja-app-CICD"
+          publish-profile: ${{ secrets.AZURE_CREDENTIALS }}
           package: publish
